--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MilestoneCST_350.Models.LoginModel
 
-<h4>LoginModel</h4>
+<h4>Login to Play!</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,14 +17,15 @@
                 <span asp-validation-for="password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Registration</a>
+    <a asp-controller="Registration" asp-action="Index">Register</a>
 </div>
 
 @section Scripts {
