--- a/Views/Registration/Index.cshtml
+++ b/Views/Registration/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MilestoneCST_350.Models.UserModel
 
-<h4>UserModel</h4>
+<h4>User Registration</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,37 +15,7 @@
                 <label asp-for="password" class="control-label"></label>
                 <input asp-for="password" class="form-control" />
                 <span asp-validation-for="password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="emailAddress" class="control-label"></label>
-                <input asp-for="emailAddress" class="form-control" />
-                <span asp-validation-for="emailAddress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="firstName" class="control-label"></label>
-                <input asp-for="firstName" class="form-control" />
-                <span asp-validation-for="firstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="lastName" class="control-label"></label>
-                <input asp-for="lastName" class="form-control" />
-                <span asp-validation-for="lastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="sex" class="control-label"></label>
-                <input asp-for="sex" class="form-control" />
-                <span asp-validation-for="sex" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="age" class="control-label"></label>
-                <input asp-for="age" class="form-control" />
-                <span asp-validation-for="age" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="state" class="control-label"></label>
-                <input asp-for="state" class="form-control" />
-                <span asp-validation-for="state" class="text-danger"></span>
-            </div>
+            </div>       
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
