--- a/Views/Game/Index.cshtml
+++ b/Views/Game/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MilestoneCST_350.Models.ButtonModel>
+﻿@model IEnumerable<MilestoneCST_350.Models.CellModel>
 
 <style>
     .game-button-image {
