Added LoseResult and WinResult Views. added HTML for radiobuttons did win condition controller function

--- a/Views/Game/LoseResult.cshtml
+++ b/Views/Game/LoseResult.cshtml
@@ -1,9 +1,9 @@
 ﻿@model MilestoneCST_350.Services.GameService
-
-<div>
-    <h4>GameService</h4>
+<<div>
+    <div class="popup">
+        <span class="popuptext" id="myPopup">You Lose! Better luck next time.</span>
+    </div>
     <hr />
-    <p>You have win or lose condition</p>
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
