--- a/Views/Game/Difficulty.cshtml
+++ b/Views/Game/Difficulty.cshtml
@@ -1,6 +1,4 @@
-﻿@model MilestoneCST_350.Models.BoardModel
-
-
+﻿
 <header>
     <script type="text/javascript">
         function selectDif()
@@ -18,12 +16,11 @@
                 alert("You have Selected Hard as your Difficulty");
             else
                 alert("You have not selected a Difficulty");
-        }
-       // return document.get
+        }       
     </script>
 </header>
 <body>
-    <h5>Choose your DIfficulty</h5>
+    <h5>Choose your Difficulty</h5>
     <form>
         <label for="easy">Easy</label>
         <input type="radio" id="easy" name="difficulty" value="1" />
@@ -36,12 +33,12 @@
         <label for="hard">Hard</label>
         <input type="radio" id="hard" name="difficulty" value="5" />
     </form>
-    <button onsubmit=""
+    <button onsubmit=""/>
 </body>
 
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Start Game</a>
 </div>
 
 @section Scripts {
