Made a change to the difficulty.cshtml file. The file should now capture the radio select value. the button now when click should hold that value. need get value from button to be transfered to method in game controller

--- a/Views/Game/Difficulty.cshtml
+++ b/Views/Game/Difficulty.cshtml
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         function selectDif()
         {
-            
+            /*
             var easy = document.getElementById("easy");
             var medium = document.getElementById("medium");
             var hard = document.getElementById("hard");
@@ -18,9 +18,18 @@
                 alert("You have Selected Hard as your Difficulty");
             else
                 alert("You have not selected a Difficulty");
+                */
+            var x = document.getElementsByName('difficulty');
+
+            for (i = 0; i < x.lenth; i++) {
+                if (x[i].checked)
+                    document.getElementsByName("result").innerHTML = "difficulty: " + x[i].value;
+            }
+
         }
        // return document.get
     </script>
+    <div id="result"></div>
 </header>
 <body>
     <h5>Choose your DIfficulty</h5>
@@ -36,7 +45,7 @@
         <label for="hard">Hard</label>
         <input type="radio" id="hard" name="difficulty" value="5" />
     </form>
-    <button onsubmit=""
+    <button onsubmit="selectDif()" value="result">Submit</button>
 </body>
 
 
