--- a/Views/Game/LoseResult.cshtml
+++ b/Views/Game/LoseResult.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MilestoneCST_350.Services.GameService
 <<div>
     <div class="popup">
-        <span class="popuptext" id="myPopup">You Lose! Better luck next time.</span>
+        <span class="popuptext" id="PopupLose">You Lose! Better luck next time.</span>
     </div>
     <hr />
 </div>
