--- a/Views/Game/WinResult.cshtml
+++ b/Views/Game/WinResult.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <div class="popup">
-        <span class="popuptext" id="myPopup">You Won!</span>
+        <span class="popuptext" id="PopupWin">You Won!</span>
     </div>
     <hr />
 </div>
